Replace Guava's ImmutableList with Java's List and use text blocks for XML formatting